Fix spacing on prices

--- a/_sass/cans.sass
+++ b/_sass/cans.sass
@@ -106,6 +106,7 @@ $animation-duration: 60s
   color: #000
   font-size: 20px
   letter-spacing: 1px
+  margin: 0
   .price-value
     &::before
       content: '$'
